[package]
edition = "2021"
name = "deltachat_napi-jsonrpc"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
deltachat-jsonrpc = { git = "https://github.com/deltachat/deltachat-core-rust/", version = "1.97.0" }
deltachat = { git = "https://github.com/deltachat/deltachat-core-rust/", version = "1.97.0" }
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.10.0", default-features = false, features = [
    "napi4",
    "tokio_rt",
    "serde-json",
    "error_anyhow"
] }
napi-derive = "2.9.1"
tokio = { version = "1" }
async-channel = "1.7.1"
anyhow = "1.0.65"
# once_cell = "1.15.0"
serde = "1.0.145"
serde_json = "1.0.86"


[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
